add placeDetails field to each place in list
